test/suites/fail-lower/L-016d.expected
  × One or more errors occured.

Error: L-016

  × "Type" is not a valid identifier
   ╭─[L-016d.pol:2:14]
 1 │ data Bool { T, F }
 2 │ codata Foo { .Type : Bool }
   ·              ────────────
   ╰────
  help: "Type" is the name of the impredicative type universe.
