test/suites/fail-lower/L-016d.pol
data Bool { T, F }
codata Foo { .Type : Bool }